[package]
name = "day25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
indexmap = { version = "2.1.0", features = ["rayon"] }
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.18.2"
